Fixed z-index issue on splash

--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -34,7 +34,7 @@
   color: white;
   width: 100%;
   top: 140px;
-  z-index: 2;
+  z-index: 1030;
 }
 
 .splashzonesticky h1 {
